--- a/example/web/index.html
+++ b/example/web/index.html
@@ -29,7 +29,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>example</title>
+  <title>Flutter Builder UI Kit</title>
   <link rel="manifest" href="manifest.json">
 
 </head>
